# hijacked

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/actions/: __init__.py  ad_client.py  containment.py
backend/app/api/: auth.py  routes_actions.py  routes_alerts.py  routes_auth.py  routes_dashboard.py  routes_filters.py  routes_logs.py  routes_settings.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py  002_prod_hardening.py  003_mailbox_filters.py  004_filter_scan_logs.py
backend/app/detect/: __init__.py  mass_send.py  rules.py  scoring.py
backend/app/google/: __init__.py  auth.py  directory_client.py  reports_client.py  scope_resolver.py
backend/app/ingest/: __init__.py  normalizer.py  poller.py
backend/app/mailbox_filters/: __init__.py  fingerprint.py  gmail_client.py  normalize.py  risk.py  sync.py
backend/app/notifier/: __init__.py  base.py  smtp.py
backend/app/services/: __init__.py  action_service.py  alert_service.py  audit_service.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_action_recording.py  test_auth_and_cron.py  test_idempotency_and_containment.py  test_logs_api.py  test_mailbox_filters.py  test_mass_send_detection.py  test_polling_controls.py  test_scoring.py
backend/workspace_security_agent.egg-info/: PKG-INFO  SOURCES.txt
frontend/: .dockerignore  Dockerfile  (+9 more)
(+12 files in other folders)
