[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-security-agent"
version = "0.1.0"
description = "Workspace Security Agent - Suspicious Activity Monitor"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
